height overflow fix

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -26,14 +26,14 @@ main {
 body::before {
     content: '';
     z-index: -1;
-    display: block;
+    display: inline-block;
     height: 390px;
     width: 390px;
     background-color: #fda5b085;
     position: absolute;
     border-radius: 50%;
     top: 10px;
-    right: -246px;
+    right: 157px;
     animation-name: bubble-opacity;
     animation-duration: 10s;
 }
@@ -47,8 +47,8 @@ body::after {
     background-color: #fcdee2a3;
     position: absolute;
     border-radius: 50%;
-    top: 240px;
-    left: -110px;
+    top: 330px;
+    left: 83px;
     animation-name: bubble-opacity;
     animation-duration: 7s;
 }
@@ -225,6 +225,7 @@ footer {
     color: var(--primary-col);
     position: relative;
     border-bottom: 3px solid #c2b6b8;
+    margin-top: 40px;
 }
 
 .pages::after {
